
	* socket.d (ipv4_ntop, ipv6_ntop): remove
	(addr_to_string): simplify
	(MACHINE-INSTANCE): use it
	(socket_getlocalname_aux, socket_getpeername): use inet_ntop
	instead of ipv[46]_ntop

2011-07-15  Sam Steingold  <sds@gnu.org>

	* encoding.d, lispbibl.d, pathname.d, socket.d, spvw.d, stream.d:
	* unix.d: always include <string.h> & <sys/socket.h> in lispbibl.d

2011-07-14  Sam Steingold  <sds@gnu.org>

	* configure.in: restore the readline check (accidentally removed)

2011-07-14  Sam Steingold  <sds@gnu.org>

	* makemake.in (UTILS): fix the last patch by making utils depend
	on ${EXTRAOBJ}

2011-07-13  Sam Steingold  <sds@gnu.org>

	* win32.d (HAVE_IPV4, HAVE_IPV6): define to 1 to avoid
	warning: "HAVE_IPV4" redefined
	Reported by Yaroslav Kavenchuk <kavenchuk@gmail.com>

2011-07-11  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (listen): undef after including unistd because gnulib
	defines it to listen_used_without_including_sys_socket_h

2011-07-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (EXTRAOBJ): set to ${GLLIB_A} to avoid
	"undefined reference to `rpl_malloc'" on mingw;
	but put it after the C file in the compilation command
	<http://article.gmane.org/gmane.lisp.clisp.devel:22573>

2011-07-08  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regexi.c (REGEXP-EXEC):
	accept :return-type 'boolean instead of :boolean t
	* modules/regexp/regexp.lisp (regexp-matcher):
	pass :return-type 'boolean to regexp-exec

2011-07-08  Sam Steingold  <sds@gnu.org>

	* win32.d, unix.d, lispbibl.d (stdlib, sys/types, unistd, locale)
	(errno): include files which are included in both unix.d and
	win32.d from lispbibl.d instead
	* socket.d: do not include these files here

2011-07-08  Sam Steingold  <sds@gnu.org>

	* makemake.in: avoid $@ in single-target rules

2011-07-07  Sam Steingold  <sds@gnu.org>

	* configure: pass --with-debug to makemake
	* makemake.in: accept --with-debug instead of positional

2011-07-06  Sam Steingold  <sds@gnu.org>
